Import of TOBYINK/TOBYINK-Pod-HTML-0.002 from CPAN.
gitpan-cpan-distribution: TOBYINK-Pod-HTML
gitpan-cpan-version:      0.002
gitpan-cpan-path:         TOBYINK/TOBYINK-Pod-HTML-0.002.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,7 @@ recommends:
   HTML::HTML5::Writer: 0.201
   PPI::Document: 0
   PPI::HTML: 0
+  Syntax::Highlight::Engine::Kate: 0
   XML::LibXML::PrettyPrint: 0
 requires:
   HTML::HTML5::Parser: 0.208
@@ -37,4 +38,4 @@ resources:
   homepage: https://metacpan.org/release/TOBYINK-Pod-HTML
   license: http://dev.perl.org/licenses/
   repository: https://bitbucket.org/tobyink/p5-tobyink-pod-html
-version: 0.001
+version: 0.002
