--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -12,6 +12,7 @@
 	recommends        p`PPI::HTML`;
 	recommends        p`XML::LibXML::PrettyPrint`;
 	recommends        p`Syntax::Highlight::Engine::Kate`;
+	recommends        p`Syntax::Highlight::RDF`;
 	install_script    f`bin/pod2html-tobyink`;
 	.
 
